--- a/home.html
+++ b/home.html
@@ -2,25 +2,36 @@
 <html>
     <head>
         <title>ALIKUTEE</title>
+        <meta name="viewport" content="width=device-width">
         <style type="text/css">
-            #main-header{
-                text-align: left;
-                background-color: rgb(250, 251, 239);
-                color: rgb(3, 24, 43);
-                padding: 1px;
-            }
-            #main-footer{
-                text-align: center;
-                padding: 100px;
-            }
+    #main-header{
+    text-align: left;
+    background-color: rgb(250, 251, 239);
+    color: rgb(3, 24, 43);
+    padding: 1px;
+    }
+    #main-footer{
+    text-align: center;
+    background-color: rgb(2, 35, 106);
+    color: rgb(248, 249, 251);
+    padding: 100px;
+    }
         </style>
     </head>
     <body>
         <header id="main-header">
-            <h1>ALIKUTEE EXPRESS</h1>
+            <a href="home.html">
+            <h1>ALIKUTEE!</h1>
+            </a>
             <h4>We deliver!</h4>
         </header>
 
+    <section>
+
+    </section>
+        <footer id="main-footer">
+            &copy; 2022 ALIKUTEE!
+        </footer>
     </body>
 
 </html>
