--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
                 <div class="card h-100">
                     <div class="container" id="container">
                         <div class="form-container sign-up-container">
-                            <form action="insert.php" method="post">
+                            <form method="POST" action="insert.php"; >
                                 <h1>Create Account</h1>
                                 <input type="text" placeholder="First Name" name="fname" required />
                                 <input type="text" placeholder="Last Name" name="lname" required />
